--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 
 	<dependencies>
 		<dependency>
+       		<groupId>jdk.tools</groupId>
+       		<artifactId>jdk.tools</artifactId>
+       		<version>1.8</version>
+       		<scope>system</scope>
+       		<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+   		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
