--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/new
+url=jdbc:mysql://140.143.232.133:3306/new
 username=root
-#password=root
-password=123456
+password=root
 #定义初始连接数  
 initialSize=0
 #定义最大连接数  
