--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -60,7 +60,7 @@
         <url-pattern>/</url-pattern>  
     </servlet-mapping>  
     <welcome-file-list>  
-        <welcome-file>/login2.jsp</welcome-file>  
+        <welcome-file>/login.jsp</welcome-file>  
     </welcome-file-list>  
   	<session-config>  
          <session-timeout>720</session-timeout>  
